--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: fishyverse
-Title: fisyverse package
+Title: fishyverse package
 Version: 1.0.0
 Authors@R: person("Théau", "Brasseur", , "ttbrasseur@gmail.com", role = c("aut", "cre"))
 Description: Package contenant les fonctions de Théau BRASSEUR.
